--- a/project.json
+++ b/project.json
@@ -4,10 +4,10 @@
   "description": "Separate a collection of error codes using Switch\r\n\r\nConsidering a collection of error codes stored in an Array of Strings, separate them based on their type of error code (\"Ax\", \"Bx\" or “Cx”) and store them in 3 different arrays. \r\n\r\nNote: The initial Array should contain the following values: \r\n\r\n\"Ax001\",\"Ax002\",\"Ax003\",\"Ax004\",\"Ax005\",\"Bx001\",\"Bx002\",\"Bx003\",\"Cx001\",\"Cx002\",\"Cx003\",\"Cx004\"",
   "main": "Main.xaml",
   "dependencies": {
-    "UiPath.Excel.Activities": "[2.10.4]",
-    "UiPath.Mail.Activities": "[1.10.5]",
-    "UiPath.System.Activities": "[21.4.1]",
-    "UiPath.UIAutomation.Activities": "[21.4.4]"
+    "UiPath.Excel.Activities": "[2.23.2-preview]",
+    "UiPath.Mail.Activities": "[1.22.2]",
+    "UiPath.System.Activities": "[24.2.0-preview]",
+    "UiPath.UIAutomation.Activities": "[24.2.1-preview]"
   },
   "webServices": [],
   "entitiesStores": [],
